# django-testing-framework

./: .gitignore  db.sqlite3  manage.py  mypy.ini.old  pyproject.toml  readme.md
cookoff/: asgi.py  settings.py  wsgi.py
cookoff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
signup/: models.py  urls.py  views.py
signup/migrations/: 0001_initial.py
templates/signup/: main.html  partial.html
